recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: ':' expected but ',' found.
def snowSide(levels, length);
                   ^Koch:25: error: identifier expected but '}' found.
} 
^